<resources>
    <string name="app_name">BookLibraryApp</string>
    <string name="labelName">Book Library Management System</string>
    <string name="addBtnDes">Add Btn Des</string>
    <string name="bookId">Book Id: </string>
    <string name="bookIdHint">B001</string>
    <string name="bookName">Book Name: </string>
    <string name="bookNameHint">Atomic Habits</string>
    <string name="bookAuthor">Book Author: </string>
    <string name="bookAuthorHint">James Clear</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>