<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout">


    <TextView
        android:id="@+id/textViewBookId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookId"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/textViewBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookName"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/textViewAuthorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookAuthor"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
</LinearLayout>