<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/updateBookId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bookIdHint"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/updateBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bookNameHint"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/updateAuthorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bookAuthorHint"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields" />
</LinearLayout>